Edited html structure

--- a/structure.html
+++ b/structure.html
@@ -1,142 +1,39 @@
 <!-- html structure for accordion feature -->
 <div class="container">
-          <h2 class="style-bold" style="text-align: center;">Frequently Asked Questions</h2>
-          <p>Do you have an eye for fashion? Scout & Molly's provides the opportunity to combine your passion for fashion and entrepreneurship in an excellent franchise opportunity! A few frequently asked question are:</p>
-          <div class="accordion">
-            <dl>
-              <dt>
-                <a href="#accordion1" aria-expanded="false" aria-controls="accordion1" class="accordion-title accordionTitle js-accordionTrigger">1. What upfront investment is required?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion1" aria-hidden="true">
-                <p>In addition to the $50,000 Franchise Fee, there are the costs associated with the initial set up, inventory, furniture, fixtures, equipment, technology and more. Total Estimated Single Unit Investment: $250,300.00 to $294,750.00 (includes $25,000 working capital). </p>
-              </dd>
-              <dt>
-                <a href="#accordion2" aria-expanded="false" aria-controls="accordion2" class="accordion-title accordionTitle js-accordionTrigger">
-                  2. What ongoing fees are required?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion2" aria-hidden="true">
-                <p>Royalty Fee: You will pay a continuing monthly Royalty Fee during the Term equal to 5-6% of gross revenue. Advertising Budget: 1% of gross revenue for national advertising campaigns. </p>
-              </dd>
-              <dt>
-                <a href="#accordion3" aria-expanded="false" aria-controls="accordion3" class="accordion-title accordionTitle js-accordionTrigger">
-                  3. What Return on Investment (ROI) can I expect?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion3" aria-hidden="true">
-                <p>Our employees or salespeople are not permitted to furnish any oral or written information concerning actual or potential sales. Actual results vary from location to location and we cannot estimate the results of any particular franchise. We encourage you to review Item 19 of our Franchise Disclosure Document for additional information on the Financial Performance Representation.</p>
-              </dd>
-<dt>
-                <a href="#accordion4" aria-expanded="false" aria-controls="accordion4" class="accordion-title accordionTitle js-accordionTrigger">
-                  4. How quickly can I expect the return on my investment to begin?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion4" aria-hidden="true">
-                <p>On average, it will take 6-9 months from the time you are awarded a Scout & Molly’s license to the time you open. In most cases, how well you follow the grand opening and on-going marketing plan provided by Scout & Molly’s determines how quickly you achieve your desired ROI.</p>
-              </dd>
-<dt>
-                <a href="#accordion5" aria-expanded="false" aria-controls="accordion5" class="accordion-title accordionTitle js-accordionTrigger">
-                 5. How many employees do I need?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion5" aria-hidden="true">
-                <p>You can start with as few as 5 to 6 part time associates along with one full time manager (or you can act as manager). Scout & Molly’s offers opportunity for a semi-absentee model or you can become an owner-operator.</p>
-              </dd>
-<dt>
-                <a href="#accordion6" aria-expanded="false" aria-controls="accordion6" class="accordion-title accordionTitle js-accordionTrigger">
-                  6. What type of facility do I need?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion6" aria-hidden="true">
-                <p>You will need approximately 1,200 square feet located in a high traffic and visibility in a Class A shopping center. This square footage will allow for adequate room for clothing and accessory displays, dressing rooms and a small storage area.</p>
-              </dd>
-<dt>
-                <a href="#accordion7" aria-expanded="false" aria-controls="accordion7" class="accordion-title accordionTitle js-accordionTrigger">
-                  7. What type of experience do I need?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion7" aria-hidden="true">
-                <p>People skills and management skills are preferred along with business experience/beginner’s level excel. Previous retail experience is not required. </p>
-              </dd>
-<dt>
-                <a href="#accordion8" aria-expanded="false" aria-controls="accordion8" class="accordion-title accordionTitle js-accordionTrigger">
-                  8. How long has Scott &amp; Molly's been in business?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion8" aria-hidden="true">
-                <p>Scout & Molly’s has been a popular boutique destination in the Raleigh, NC market since Spring 2002. The Scout & Molly’s brand was fresh and people quickly caught on. Customers started to mention they wished they could open their own Scout & Molly’s so we took the next step and started franchising the business so others could enjoy the unique shopping experience that Scout & Molly’s delivers.</p>
-              </dd>
-<dt>
-                <a href="#accordion9" aria-expanded="false" aria-controls="accordion9" class="accordion-title accordionTitle js-accordionTrigger">
-                  9. How much training will I receive?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion9" aria-hidden="true">
-                <p>Scout & Molly’s provides six days of initial training. You will be taught the Scout & Molly’s merchandise modules, inventory control and ordering procedures, marketing programs, Point of Sale systems and other store operations. On-going training and conference calls, site visits and conferences will be conducted as needed. </p>
-              </dd>
-<dt>
-                <a href="#accordion10" aria-expanded="false" aria-controls="accordion10" class="accordion-title accordionTitle js-accordionTrigger">
-                  10. How much support will I receive after the initial training, and specifically, how does Scout &amp; Molly's support my business?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion10" aria-hidden="true">
-                <p>Scout & Molly’s provides you with all the essential training needed to smoothly launch and celebrate your grand opening and post opening operations. All Scout & Molly’s owners will have ongoing support for marketing needs, inventory and buying programs, manager training and technology support. </p>
-              </dd>
-<dt>
-                <a href="#accordion11" aria-expanded="false" aria-controls="accordion11" class="accordion-title accordionTitle js-accordionTrigger">
-                  11. What are the benefits of owning my own Scout &amp; Molly's Franchise?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion11" aria-hidden="true">
-                <p><ul><li class="pink-dot">Semi-absentee business model or owner/manager (full time)</li>
-<li class="pink-dot">Make a difference in your community</li>
-<li class="pink-dot">Unique and different fashion lines not found in all stores</li>
-<li class="pink-dot">Comprehensive marketing program</li>
-<li class="pink-dot">Small staff model</li>
-<li class="pink-dot">Multi-unit opportunity</li>
-<li class="pink-dot">Strong Return on Investment (ROI)</li></ul> </p>
-              </dd>
-<dt>
-                <a href="#accordion12" aria-expanded="false" aria-controls="accordion12" class="accordion-title accordionTitle js-accordionTrigger">
-                  12. What are the key drivers of the business - the key skills needed?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion12" aria-hidden="true">
-                <p>As much fun and as exciting as the Scout & Molly’s Franchise opportunity is, it is certainly not for everyone. Scout & Molly’s is looking for energetic owners who have strong business and people skills. Following the Scout & Molly’s Franchise system is imperative to success. </p>
-              </dd>
-<dt>
-                <a href="#accordion13" aria-expanded="false" aria-controls="accordion13" class="accordion-title accordionTitle js-accordionTrigger">
-                  13. What is your competitive differentiation?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion13" aria-hidden="true">
-                <p>Scout & Molly’s is described as vintage chic and this vibe is carried throughout the interior of our stores but also spills out onto the sidewalks (where applicable). The lines of clothing we carry are unique and rarely found in other stores in your market. Boutiques are chic – people value the personalized service and attention they receive, the cozy ambiance and the unique merchandise that only a Scout & Molly’s can offer.</p>
-              </dd>
-<dt>
-                <a href="#accordion14" aria-expanded="false" aria-controls="accordion14" class="accordion-title accordionTitle js-accordionTrigger">
-                  14. Will I receive a protected territory?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion14" aria-hidden="true">
-                <p>Yes, you will receive a protected territory. </p>
-              </dd>
-<dt>
-                <a href="#accordion15" aria-expanded="false" aria-controls="accordion15" class="accordion-title accordionTitle js-accordionTrigger">
-                  15. What will cause my Scout &amp; Molly's Franchise business to grow quickly?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion15" aria-hidden="true">
-                <p>Aggressive advertising and community outreach activities, sales, marketing and private parties will build a positive, stable business. In addition, following the proven systems provided by Scout & Molly’s will expedite success.</p>
-              </dd>
-<dt>
-                <a href="#accordion16" aria-expanded="false" aria-controls="accordion16" class="accordion-title accordionTitle js-accordionTrigger">
-                  16. How do I get started?<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span>
-                </a>
-              </dt>
-              <dd class="accordion-content accordionItem is-collapsed" id="accordion16" aria-hidden="true">
-                <p>Complete the Online Request for <a href="http://ownscoutmolly.wpengine.com/contact/">Information Packet</a>. When you have received your information packet, fill out the Franchise Application and return it to Scout & Molly’s via fax (919) 303-6191, or e-mail to info@scoutandmollys.com. </p>
-                <p>Upon receipt of your application, we will contact you and send you a Franchise Disclosure Document (FDD) to continue the franchising process. If there continues to be mutual interest, we will invite you to the corporate office for a Discovery Day visit.</p>
-              </dd>
-           </dl>
-</div>
-<p>Scout & Molly’s is committed to making every city, town and community look great by stocking fashionable and highly sought after designs. We will ensure we are staying abreast of fashion trends and seasons to bring our franchisees the best buying options. Our business experience and operational system has proven to assist our franchisees to grow business quickly, efficiently and successfully.</p>
+  <h2 class="accordion-header">Accordion Style Information Feature</h2>
+  <p>This is an accordion style feature that uses html, css, and javascript.  This can be used for any drop down information such as a "frequently asked question area".</p>
+    <div class="accordion">
+      <dl>
+        <dt>
+          <a href="#accordion1" aria-expanded="false" aria-controls="accordion1" class="accordion-title accordionTitle js-accordionTrigger">1. Drop Down Accordion #1<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
+        </dt>
+        <dd class="accordion-content accordionItem is-collapsed" id="accordion1" aria-hidden="true">
+          <p>Info 1: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </dd>
+        <dt>
+          <a href="#accordion2" aria-expanded="false" aria-controls="accordion2" class="accordion-title accordionTitle js-accordionTrigger">2. Drop Down Accordion #2<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
+        </dt>
+        <dd class="accordion-content accordionItem is-collapsed" id="accordion2" aria-hidden="true">
+          <p>Info #2: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. </p>
+        </dd>
+        <dt>
+          <a href="#accordion3" aria-expanded="false" aria-controls="accordion3" class="accordion-title accordionTitle js-accordionTrigger">3. Drop Down Accordion #3<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
+        </dt>
+        <dd class="accordion-content accordionItem is-collapsed" id="accordion3" aria-hidden="true">
+          <p>Info #3: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </dd>
+        <dt>
+          <a href="#accordion4" aria-expanded="false" aria-controls="accordion4" class="accordion-title accordionTitle js-accordionTrigger">4. Drop Down Accordion #4<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
+        </dt>
+        <dd class="accordion-content accordionItem is-collapsed" id="accordion4" aria-hidden="true">
+          <p>Info #4: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </dd>
+        <dt>
+          <a href="#accordion5" aria-expanded="false" aria-controls="accordion5" class="accordion-title accordionTitle js-accordionTrigger">5. Drop Down Accordion #5<span class="dashicons dashicons-arrow-down-alt2" color="white"> </span></a>
+        </dt>
+        <dd class="accordion-content accordionItem is-collapsed" id="accordion5" aria-hidden="true">
+            <p>Info #5: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+        </dd>
+      </dl>
+  </div>
 </div>
